--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="search-container">
-        <h1>Search Engine</h1>
-        <input type="text" id="search-bar" placeholder="Search...">
-    </div>
-    <div id="search-results"></div>
+    <script async src="https://cse.google.com/cse.js?cx=17cd0ec1dd6064c33">
+</script>
+<div class="gcse-search"></div>
     <script src="script.js"></script>
 </body>
 </html>
