--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script async src="https://cse.google.com/cse.js?cx=17cd0ec1dd6064c33">
-</script>
-<div class="gcse-search"></div>
+    <meta name="google-adsense-account" content="ca-pub-5241347462007632">
     <script src="script.js"></script>
 </body>
 </html>
